Start adding take5-remote...
It will need broader refactoring for changes to serde/rustc-deserialize
since this was originally written.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ authors = [
 ]
 
 [workspace]
-members = ["take5-cli", "take5-ext"]
+members = ["take5-cli", "take5-ext", "take5-remote"]
 
 [dependencies]
 itertools = "0.4"
