Update to rust edition 2021

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = [
     "Nathan Lilienthal <nathan@nixpulvis.com>",
     "Alex Jo <jo.al@husky.neu.edu>",
 ]
+edition = '2021'
 
 [workspace]
 members = ["take5-cli", "take5-ext", "take5-remote"]
